# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
rust-version = "1.70"
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-channel = "2.2"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "=4.4.18", features = ["derive"] }
console-subscriber = "0.2"
thiserror = "1"                                # error handling
tokio = { version = "1.23", features = ["full", "tracing"] } # async networking
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
