# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
rust-version = "1.70"
edition = "2021"

[features]
debug = ["console-subscriber"]
# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "=4.4.18", features = ["derive"] }
console-subscriber = { version =" 0.2",  optional = true }
derive-debug-extras = "=0.2.2"
futures = "0.3.30"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-resp = "0.3.1"
thiserror = "1"
tokio = { version = "1.23", features = ["full", "tracing"] } # async networking
tokio-util = { version ="0.7.10", features = ["codec"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
